feat: implement tournments module
